Language/y.output
Terminals unused in grammar

   OPERATOR


State 10 conflicts: 2 shift/reduce
State 11 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 40 conflicts: 2 shift/reduce
State 41 conflicts: 2 shift/reduce
State 50 conflicts: 2 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: STATEMENT

    2 STATEMENT: STATEMENT STATEMENT
    3          | DECLARATION
    4          | FUNC_CALL
    5          | EOL

    6 DECLARATION: FUNC_ASSIGN_VAR

    7 FUNC_CALL: NAME AP expr FP
    8          | NAME AP FUNC_CALL FP

    9 FUNC_ASSIGN_VAR: NAME AP NAME FP ASSIGN expr

   10 expr: expr SUM expr
   11     | expr MIN expr
   12     | term
   13     | IF condition THEN expr ELSE expr

   14 condition: expr ASSIGN expr
   15          | expr GT expr
   16          | expr LT expr

   17 term: term TIMES factor
   18     | term DIV factor
   19     | factor

   20 factor: AP expr FP
   21       | MIN factor
   22       | NUMBER
   23       | NAME
   24       | FUNC_CALL


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258) 7 8 9 23
NUMBER (259) 22
OPERATOR (260)
EOL (261) 5
AP (262) 7 8 9 20
FP (263) 7 8 9 20
ASSIGN (264) 9 14
SUM (265) 10
MIN (266) 11 21
TIMES (267) 17
DIV (268) 18
IF (269) 13
THEN (270) 13
ELSE (271) 13
GT (272) 15
LT (273) 16


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
PROGRAM (20)
    on left: 1, on right: 0
STATEMENT (21)
    on left: 2 3 4 5, on right: 1 2
DECLARATION (22)
    on left: 6, on right: 3
FUNC_CALL (23)
    on left: 7 8, on right: 4 8 24
FUNC_ASSIGN_VAR (24)
    on left: 9, on right: 6
expr (25)
    on left: 10 11 12 13, on right: 7 9 10 11 13 14 15 16 20
condition (26)
    on left: 14 15 16, on right: 13
term (27)
    on left: 17 18 19, on right: 12 17 18
factor (28)
    on left: 20 21 22 23 24, on right: 17 18 19 21


State 0

    0 $accept: . PROGRAM $end

    NAME  shift, and go to state 1
    EOL   shift, and go to state 2

    PROGRAM          go to state 3
    STATEMENT        go to state 4
    DECLARATION      go to state 5
    FUNC_CALL        go to state 6
    FUNC_ASSIGN_VAR  go to state 7


State 1

    7 FUNC_CALL: NAME . AP expr FP
    8          | NAME . AP FUNC_CALL FP
    9 FUNC_ASSIGN_VAR: NAME . AP NAME FP ASSIGN expr

    AP  shift, and go to state 8


State 2

    5 STATEMENT: EOL .

    $default  reduce using rule 5 (STATEMENT)


State 3

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 9


State 4

    1 PROGRAM: STATEMENT .
    2 STATEMENT: STATEMENT . STATEMENT

    NAME  shift, and go to state 1
    EOL   shift, and go to state 2

    $default  reduce using rule 1 (PROGRAM)

    STATEMENT        go to state 10
    DECLARATION      go to state 5
    FUNC_CALL        go to state 6
    FUNC_ASSIGN_VAR  go to state 7


State 5

    3 STATEMENT: DECLARATION .

    $default  reduce using rule 3 (STATEMENT)


State 6

    4 STATEMENT: FUNC_CALL .

    $default  reduce using rule 4 (STATEMENT)


State 7

    6 DECLARATION: FUNC_ASSIGN_VAR .

    $default  reduce using rule 6 (DECLARATION)


State 8

    7 FUNC_CALL: NAME AP . expr FP
    8          | NAME AP . FUNC_CALL FP
    9 FUNC_ASSIGN_VAR: NAME AP . NAME FP ASSIGN expr

    NAME    shift, and go to state 11
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 16
    expr       go to state 17
    term       go to state 18
    factor     go to state 19


State 9

    0 $accept: PROGRAM $end .

    $default  accept


State 10

    2 STATEMENT: STATEMENT . STATEMENT
    2          | STATEMENT STATEMENT .

    NAME  shift, and go to state 1
    EOL   shift, and go to state 2

    NAME      [reduce using rule 2 (STATEMENT)]
    EOL       [reduce using rule 2 (STATEMENT)]
    $default  reduce using rule 2 (STATEMENT)

    STATEMENT        go to state 10
    DECLARATION      go to state 5
    FUNC_CALL        go to state 6
    FUNC_ASSIGN_VAR  go to state 7


State 11

    7 FUNC_CALL: NAME . AP expr FP
    8          | NAME . AP FUNC_CALL FP
    9 FUNC_ASSIGN_VAR: NAME AP NAME . FP ASSIGN expr
   23 factor: NAME .

    AP  shift, and go to state 20
    FP  shift, and go to state 21

    FP        [reduce using rule 23 (factor)]
    $default  reduce using rule 23 (factor)


State 12

   22 factor: NUMBER .

    $default  reduce using rule 22 (factor)


State 13

   20 factor: AP . expr FP

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 24
    term       go to state 18
    factor     go to state 19


State 14

   21 factor: MIN . factor

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14

    FUNC_CALL  go to state 23
    factor     go to state 25


State 15

   13 expr: IF . condition THEN expr ELSE expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 26
    condition  go to state 27
    term       go to state 18
    factor     go to state 19


State 16

    8 FUNC_CALL: NAME AP FUNC_CALL . FP
   24 factor: FUNC_CALL .

    FP  shift, and go to state 28

    FP        [reduce using rule 24 (factor)]
    $default  reduce using rule 24 (factor)


State 17

    7 FUNC_CALL: NAME AP expr . FP
   10 expr: expr . SUM expr
   11     | expr . MIN expr

    FP   shift, and go to state 29
    SUM  shift, and go to state 30
    MIN  shift, and go to state 31


State 18

   12 expr: term .
   17 term: term . TIMES factor
   18     | term . DIV factor

    TIMES  shift, and go to state 32
    DIV    shift, and go to state 33

    $default  reduce using rule 12 (expr)


State 19

   19 term: factor .

    $default  reduce using rule 19 (term)


State 20

    7 FUNC_CALL: NAME AP . expr FP
    8          | NAME AP . FUNC_CALL FP

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 16
    expr       go to state 17
    term       go to state 18
    factor     go to state 19


State 21

    9 FUNC_ASSIGN_VAR: NAME AP NAME FP . ASSIGN expr

    ASSIGN  shift, and go to state 34


State 22

    7 FUNC_CALL: NAME . AP expr FP
    8          | NAME . AP FUNC_CALL FP
   23 factor: NAME .

    AP  shift, and go to state 20

    $default  reduce using rule 23 (factor)


State 23

   24 factor: FUNC_CALL .

    $default  reduce using rule 24 (factor)


State 24

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   20 factor: AP expr . FP

    FP   shift, and go to state 35
    SUM  shift, and go to state 30
    MIN  shift, and go to state 31


State 25

   21 factor: MIN factor .

    $default  reduce using rule 21 (factor)


State 26

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   14 condition: expr . ASSIGN expr
   15          | expr . GT expr
   16          | expr . LT expr

    ASSIGN  shift, and go to state 36
    SUM     shift, and go to state 30
    MIN     shift, and go to state 31
    GT      shift, and go to state 37
    LT      shift, and go to state 38


State 27

   13 expr: IF condition . THEN expr ELSE expr

    THEN  shift, and go to state 39


State 28

    8 FUNC_CALL: NAME AP FUNC_CALL FP .

    $default  reduce using rule 8 (FUNC_CALL)


State 29

    7 FUNC_CALL: NAME AP expr FP .

    $default  reduce using rule 7 (FUNC_CALL)


State 30

   10 expr: expr SUM . expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 40
    term       go to state 18
    factor     go to state 19


State 31

   11 expr: expr MIN . expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 41
    term       go to state 18
    factor     go to state 19


State 32

   17 term: term TIMES . factor

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14

    FUNC_CALL  go to state 23
    factor     go to state 42


State 33

   18 term: term DIV . factor

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14

    FUNC_CALL  go to state 23
    factor     go to state 43


State 34

    9 FUNC_ASSIGN_VAR: NAME AP NAME FP ASSIGN . expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 44
    term       go to state 18
    factor     go to state 19


State 35

   20 factor: AP expr FP .

    $default  reduce using rule 20 (factor)


State 36

   14 condition: expr ASSIGN . expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 45
    term       go to state 18
    factor     go to state 19


State 37

   15 condition: expr GT . expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 46
    term       go to state 18
    factor     go to state 19


State 38

   16 condition: expr LT . expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 47
    term       go to state 18
    factor     go to state 19


State 39

   13 expr: IF condition THEN . expr ELSE expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 48
    term       go to state 18
    factor     go to state 19


State 40

   10 expr: expr . SUM expr
   10     | expr SUM expr .
   11     | expr . MIN expr

    SUM  shift, and go to state 30
    MIN  shift, and go to state 31

    SUM       [reduce using rule 10 (expr)]
    MIN       [reduce using rule 10 (expr)]
    $default  reduce using rule 10 (expr)


State 41

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   11     | expr MIN expr .

    SUM  shift, and go to state 30
    MIN  shift, and go to state 31

    SUM       [reduce using rule 11 (expr)]
    MIN       [reduce using rule 11 (expr)]
    $default  reduce using rule 11 (expr)


State 42

   17 term: term TIMES factor .

    $default  reduce using rule 17 (term)


State 43

   18 term: term DIV factor .

    $default  reduce using rule 18 (term)


State 44

    9 FUNC_ASSIGN_VAR: NAME AP NAME FP ASSIGN expr .
   10 expr: expr . SUM expr
   11     | expr . MIN expr

    SUM  shift, and go to state 30
    MIN  shift, and go to state 31

    $default  reduce using rule 9 (FUNC_ASSIGN_VAR)


State 45

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   14 condition: expr ASSIGN expr .

    SUM  shift, and go to state 30
    MIN  shift, and go to state 31

    $default  reduce using rule 14 (condition)


State 46

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   15 condition: expr GT expr .

    SUM  shift, and go to state 30
    MIN  shift, and go to state 31

    $default  reduce using rule 15 (condition)


State 47

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   16 condition: expr LT expr .

    SUM  shift, and go to state 30
    MIN  shift, and go to state 31

    $default  reduce using rule 16 (condition)


State 48

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   13     | IF condition THEN expr . ELSE expr

    SUM   shift, and go to state 30
    MIN   shift, and go to state 31
    ELSE  shift, and go to state 49


State 49

   13 expr: IF condition THEN expr ELSE . expr

    NAME    shift, and go to state 22
    NUMBER  shift, and go to state 12
    AP      shift, and go to state 13
    MIN     shift, and go to state 14
    IF      shift, and go to state 15

    FUNC_CALL  go to state 23
    expr       go to state 50
    term       go to state 18
    factor     go to state 19


State 50

   10 expr: expr . SUM expr
   11     | expr . MIN expr
   13     | IF condition THEN expr ELSE expr .

    SUM  shift, and go to state 30
    MIN  shift, and go to state 31

    SUM       [reduce using rule 13 (expr)]
    MIN       [reduce using rule 13 (expr)]
    $default  reduce using rule 13 (expr)
